@@ -3,6 +3,19 @@
 # Start all init scripts in /etc/rc.d
 # executing them in numerical order.
 
+#include kernel config                                                                                                                      
+. /bin/config.sh    
+
+if [ $CONFIG_TMPFS != "" ] ; then
+    #mount /tmp /etc in /var
+    mkdir -p /var/tmpfs
+    mount -o bind /var/tmpfs /tmp
+    mount -o bind /var/tmpfs /var/tmp
+    #make dir for rwfs
+    mkdir -p /var/rwfs
+    mount -o bind /var/tmpfs /etc
+fi
+
 TGZfs_size=131072
 BLOCKS=2
 MTDDEVICE=/dev/mtdblock5
